#11 multiple property query

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <base href="/" />
 
     <title>Mineraalid, kivimid, maavarad</title>
-
+    <link rel="preconnect" href="https://api.geocollections.info">
+    <link rel="preconnect" href="https://geocollections.info">
+    <link rel="preconnect" href="https://files.geocollections.info">
+    <link rel="preconnect" href="https://fossiilid.info">
+    <link rel="preconnect" href="https://api.tiles.mapbox.com">
     <link rel="manifest" href="static/manifest.json">
 
     <link rel="preconnect" href="http://geokogud.info">
