--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <meta name="description" content="Mineraalide, kivimite ja maavarade portaal">
     <meta name="author" content="Tallinna Tehnikaülikool Geoloogia Instituut, OS">
+    <!-- Meta tags for social networks -->
+    <!--<meta property="og:url" content="https://dev.kivid.info/">-->
+    <!--<meta property="og:type" content="website">-->
+    <!--<meta property="og:title" content="Mineraalide, kivimite ja maavarade portaal">-->
+    <!--<meta property="og:description" content="Mineraalide, kivimite ja maavarade portaal">-->
+    <!--<meta property="og:image" content="https://eurocore.rocks/images/logo_Eurocore_small_no_text_preview.png">-->
 
     <!-- Chrome, Firefox OS and Opera address bar color -->
     <meta name="theme-color" content="#004393">
@@ -17,7 +23,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#004393">
 
     <base href="/" />
-
     <title>Mineraalid, kivimid, maavarad</title>
     <link rel="preconnect" href="https://api.geocollections.info">
     <link rel="preconnect" href="https://geocollections.info">
