--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Mineraalide, kivimite ja maavarade portaal">
+    <!--<meta name="description" content="Mineraalide, kivimite ja maavarade portaal">-->
     <meta name="author" content="Tallinna Tehnikaülikool Geoloogia Instituut, OS">
     <!-- Meta tags for social networks -->
     <!--<meta property="og:url" content="https://dev.kivid.info/">-->
