--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <!--<meta name="description" content="Mineraalide, kivimite ja maavarade portaal">-->
     <meta name="author" content="Tallinna Tehnikaülikool Geoloogia Instituut, OS">
     <!-- Meta tags for social networks -->
-    <!--<meta property="og:url" content="https://dev.kivid.info/">-->
-    <!--<meta property="og:type" content="website">-->
-    <!--<meta property="og:title" content="Mineraalide, kivimite ja maavarade portaal">-->
-    <!--<meta property="og:description" content="Mineraalide, kivimite ja maavarade portaal">-->
-    <!--<meta property="og:image" content="https://eurocore.rocks/images/logo_Eurocore_small_no_text_preview.png">-->
+    <meta property="og:url" content="https://dev.kivid.info/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mineraalide, kivimite ja maavarade portaal">
+    <meta property="og:description" content="Mineraalide, kivimite ja maavarade portaal">
+    <meta property="og:image" content="https://files.geocollections.info/medium/9d/b5/9db5b4d9-7e83-471f-a2dd-cf2f440064f1.jpg">
+    
+    <meta property="twitter:title" content="Mineraalide, kivimite ja maavarade portaal">
+    <meta property="twitter:description" content="Mineraalide, kivimite ja maavarade portaal">
+    <meta property="twitter:image" content="https://files.geocollections.info/medium/9d/b5/9db5b4d9-7e83-471f-a2dd-cf2f440064f1.jpg">
 
     <!-- Chrome, Firefox OS and Opera address bar color -->
     <meta name="theme-color" content="#004393">
