--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
   </head>
   <body>
@@ -69,9 +68,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
-    <script src="/static/js/leaflet-1.3.4/leaflet.js"></script>
-    <script src="/static/js/leaflet-fullscreen/Leaflet.fullscreen.js"></script>
-    <script src="/static/js/leaflet-coordinates-0.1.5/leaflet.coordinates.min.js"></script>
-    <script src="/static/js/leaflet-wicket/wicket.js"></script>
+    <!--<script src="/static/js/leaflet-1.3.4/leaflet.js"></script>-->
+    <!--<script src="/static/js/leaflet-fullscreen/Leaflet.fullscreen.js"></script>-->
+    <!--<script src="/static/js/leaflet-coordinates-0.1.5/leaflet.coordinates.min.js"></script>-->
+    <!--<script src="/static/js/leaflet-wicket/wicket.js"></script>-->
   </body>
 </html>
