--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <!-- built files will be auto injected -->
 
     <!-- Service worker -->
-    <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
-    <script>
-      if('serviceWorker' in navigator) {
-        navigator.serviceWorker
-          .register('/service-worker.js')
-          .then(function() { console.log("Service Worker Registered"); });
-      }
-    </script>
+    <!--<%= htmlWebpackPlugin.options.serviceWorkerLoader %>-->
+    <!--<script>-->
+      <!--if('serviceWorker' in navigator) {-->
+        <!--navigator.serviceWorker-->
+          <!--.register('/service-worker.js')-->
+          <!--.then(function() { console.log("Service Worker Registered"); });-->
+      <!--}-->
+    <!--</script>-->
     <!-- Matomo -->
     <script type="text/javascript">
       var _paq = _paq || [];
@@ -75,9 +75,9 @@
     <!-- End Matomo Code -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <!--<script src="/static/js/leaflet-1.3.4/leaflet.js"></script>-->
     <!--<script src="/static/js/leaflet-fullscreen/Leaflet.fullscreen.js"></script>-->
     <!--<script src="/static/js/leaflet-coordinates-0.1.5/leaflet.coordinates.min.js"></script>-->
