--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <!-- built files will be auto injected -->
 
     <!-- Service worker -->
-    <!--<%= htmlWebpackPlugin.options.serviceWorkerLoader %>-->
-    <!--<script>-->
-      <!--if('serviceWorker' in navigator) {-->
-        <!--navigator.serviceWorker-->
-          <!--.register('/service-worker.js')-->
-          <!--.then(function() { console.log("Service Worker Registered"); });-->
-      <!--}-->
-    <!--</script>-->
+    <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
+    <script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('/service-worker.js')
+          .then(function() { console.log("Service Worker Registered"); });
+      }
+    </script>
     <!-- Matomo -->
     <script type="text/javascript">
       var _paq = _paq || [];
