--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <!--  <link rel="preconnect" href="http://geokogud.info"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="static/css/jquery.fancybox.min.css" />
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />-->
   </head>
   <body>
 
@@ -74,10 +75,14 @@
     </script>
     <!-- End Matomo Code -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+    <script src="static/js/jquery-3.3.1.min.js"></script>
+    <script async src="static/js/popper.min.js"></script>
+    <script async src="static/js/bootstrap.min.js"></script>
+    <script async src="static/js/jquery.fancybox.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
+    <!--<script async src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>-->
+    <!--<script async src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
+    <!--<script async src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>-->
     <!--<script src="/static/js/leaflet-1.3.4/leaflet.js"></script>-->
     <!--<script src="/static/js/leaflet-fullscreen/Leaflet.fullscreen.js"></script>-->
     <!--<script src="/static/js/leaflet-coordinates-0.1.5/leaflet.coordinates.min.js"></script>-->
